# Caspi

./: .gitignore  BEATING_SOTA_ANALYSIS.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_ROUND2.md  DEPLOY_8xA100.md  DEPLOY_LAMBDA_FINAL.md  EVALUATION_GUIDE.md  FINETUNING_GUIDE.md  GETTING_STARTED.md  HANDOFF_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  IVRIT_AI_DATASET_INTEGRATION.md  LAMBDA_LABS_SETUP.md  PRETRAINING_CHECKLIST.md  QUICK_START_100K.md  QUICK_START_ROUND2.md  README.md  READY_TO_DEPLOY.md  ROUND2.5_IMPLEMENTATION.md  ROUND2_SOTA_OPTIMIZATIONS.md  TECHNICAL_SPEC_ROUND2.md  TECHNICAL_SUMMARY.md  TRAINING_OPTIONS.md  benchmark_hebrew_asr.py  config.yaml  deploy_to_lambda.py  deploy_to_lambda_simple.sh  launch_training.py  main.py  prepare_100k_dataset.py  prepare_hf_dataset_linux.py  prepare_preprocessed_100k.py  prepare_qwen_data.py  pyproject.toml  run_training_job.py  test_audio_processing.py  test_fixed_approach.py  test_setup.py  train_100k_muon.py  (+12 more)
qwen3-asr-hebrew-model/: .gitignore  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DEPLOY_WITH_VLLM.md  LAMBDA_H100_SETUP.md  README.md  WHY_NOT_VLLM.md  added_tokens.json  benchmark_on_h100.py  benchmark_ozlabs.csv  client_example.py  config.json  deploy_to_gpu.sh  deploy_to_lambda_h100.sh  deploy_to_lambda_simple.sh  generation_config.json  pyproject.toml  quick_test_h100.py  serve_asr.py  serve_eval_api.py  test_h100_server.py  test_h100_simple.py  test_via_ssh.py  test_with_dataset_sample.py  tokenizer_config.json  trainer_state.json
qwen3-asr-hebrew-model/eval_data/: ignored_words.json  spelling_equivalences.json
qwen3-asr-hebrew-model/frontend/: package-lock.json  package.json
qwen3-asr-hebrew-model/frontend/src/: App.tsx  index.css
qwen3-asr-hebrew-model/frontend/src/api/: client.ts  types.ts
qwen3-asr-hebrew-model/frontend/src/components/: EvaluationPanel.tsx  ResultsPanel.tsx
qwen3-asr-hebrew-model/frontend/src/hooks/: useSSE.ts
qwen3-asr-hebrew-model/scripts/: benchmark.py  benchmark_local.py  deploy.sh  evaluate_model.py
qwen3-asr-hebrew-model/scripts/engines/: qwen_asr_engine.py
qwen3-asr-hebrew-model/src/benchmarks/: __init__.py  evaluate.py  metrics.py
qwen3-asr-hebrew-model/src/qwen_asr/: __init__.py  audio.py  client.py  datasets.py
scripts/: clear_hf_cache.sh  download_from_lambda_s3.sh  download_from_lambda_storage.sh  eval_round2.py  evaluate_ivrit_benchmarks.py  free_disk_space.sh  launch_training.sh  merge_datasets_on_lambda.py  optimize_lambda_workers.sh  phase0_align_audit.py  prebuild_round25_dataset.py  prep_knesset_only.py  process_knesset_only.py  quick_eval.py  (+2 more)
(+1 files in other folders)
