[project]
name = "caspi"
version = "0.1.0"
description = "Qwen3-ASR Hebrew fine-tuning project"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.52",
    "datasets>=2.14.0",
    "accelerate>=0.20.0",
    "peft>=0.7.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "evaluate>=0.4.0",
    "jiwer>=3.0.0",
    "tqdm>=4.65.0",
    "torchcodec>=0.10.0",
    "qwen-asr>=0.0.6",
    "wandb>=0.16.0",
]
