[project]
name = "qwen3-asr-hebrew"
version = "1.0.0"
description = "Fine-tuned Qwen3-ASR for Hebrew speech recognition"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.37.0",
    "datasets>=2.14.0",
    "soundfile>=0.12.1",
    "librosa>=0.10.0",
    "qwen-asr",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "jiwer>=3.0.0",  # For WER calculation
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

monitoring = [
    "prometheus-fastapi-instrumentator>=6.1.0",
]

optimization = [
    "onnx>=1.14.0",
    "onnxruntime-gpu>=1.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"
