[project]
name = "qwen3-asr-hebrew"
version = "1.0.0"
description = "Fine-tuned Qwen3-ASR for Hebrew speech recognition"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.37.0",
    "datasets>=2.14.0",
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
    "openai>=1.0.0", # For vLLM client
    "huggingface-hub>=0.19.0",
    "jiwer>=3.0.0", # For WER calculation
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "librosa>=0.10.0", # For audio decoding
    "qwen-asr>=0.0.6", # Qwen3-ASR inference
    "hebrew>=0.8.1",
    "openai-whisper>=20250625",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

vllm = [
    "vllm[audio]>=0.6.0",
]

training = [
    "librosa>=0.10.0",
    "qwen-asr",
]

audio = [
    "torchcodec>=0.1.0",  # For audio decoding
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qwen_asr", "src/benchmarks"]

[tool.ruff]
line-length = 100
target-version = "py310"
